# paragliding-tracks

./: .env.example  .gitignore  EKF_MODEL.md  README.md  extended_kalman_filter.md  pyproject.toml
app/: cache.py  config.py  db.py  main.py
app/models/: schemas.py
app/routers/: bookmarks.py  dem.py  igc.py  overlays.py  weather.py
app/services/: dem_source.py  igc_analysis.py  overlay.py  sun.py  thermal_analysis.py  thermal_ekf.py  triangulation.py  wind.py
scripts/: fetch_dem.py
src/paragliding_tracks/: __init__.py
tests/: test_normals.py  test_overlay_math.py  test_sun_wind_alignment.py  test_thermal_ekf.py
web/: index.html
