[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paragliding-tracks"
version = "0.1.0"
description = "Flight log visualization with thermal trigger potential for German Flatlands"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paragliding_tracks"]

[tool.ruff]
src = ["src"]
