[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thermal-trigger"
version = "0.1.0"
description = "Thermal trigger visualizer for paragliding over German flatlands"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "numpy>=1.26.0",
    "rasterio>=1.3.10",
    "pyproj>=3.6.1",
    "pvlib>=0.10.5",
    "Pillow>=10.3.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "py3dep>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.7",
    "httpx>=0.27.0",
]
igc = [
    "aerofiles>=0.5.0",
    "filterpy>=1.4.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
